--- a/httpd-php7/config/php/conf.d/extensions.ini
+++ b/httpd-php7/config/php/conf.d/extensions.ini
@@ -1,14 +1,39 @@
+extension=pear
+extension=pdo
+extension=enchant
+extension=mysqlnd
 extension=gd
-extension=mysqli
-extension=sodium
-extension=pdo_mysql
-extension=exif
-extension=zip
-extension=imagick
-extension=mcrypt
-extension=pspell
-extension=redis
-extension=sockets
+extension=curl 
+extension=dom 
+extension=exif 
+extension=fileinfo 
+extension=hash 
+extension=json 
+extension=mbstring 
+extension=mysqli 
+extension=libsodium 
+extension=openssl 
+extension=pcre 
+extension=imagick 
+extension=xml 
+extension=zip 
+extension=filter 
+extension=iconv 
+extension=mcrypt 
+extension=simplexml 
+extension=xmlreader 
+extension=zlib 
+extension=ftp 
+extension=pspell 
+extension=redis 
+extension=sockets 
 extension=ssh2
+extension=pdo_mysql 
+extension=posix 
+extension=SPL 
+extension=tokenizer 
+extension=date 
+extension=gmagick 
+extension=libxml
 
 zend_extension=opcache
