--- a/httpd-php7/config/php/php.ini
+++ b/httpd-php7/config/php/php.ini
@@ -227,7 +227,9 @@ output_buffering = 4096
 ; Note: output_handler must be empty if this is set 'On' !!!!
 ;   Instead you must use zlib.output_handler.
 ; http://php.net/output-handler
-;output_handler =
+output_handler = off
+zlib.output_compression = On
+zlib.output_handler = ob_gzhandler
 
 ; URL rewriter function rewrites URL on the fly by using
 ; output buffer. You can set target tags by this configuration.
