--- a/httpd-php7/docker-compose.yml
+++ b/httpd-php7/docker-compose.yml
@@ -2,15 +2,33 @@ version: "3.7"
 
 services:
   apache:
-    image: 'httpd:2.4'
     container_name: apache
+    image: 'httpd:2.4'
     ports:
-      - '80:8080'
+      - '80:$PORT'
+    restart: unless-stopped
+    user: $PUID:$PGID
+    networks:
+      - proxy
     volumes:
       - ./site:/var/www/html
-      - ./config/apache/conf:/usr/local/apache2/conf
+      - ./config/apache:/usr/local/apache2/conf
+      - ./config/apache/vhosts:/usr/local/apache2/conf/vhosts
+      - ./config/apache/extra:/usr/local/apache2/conf/extra
       - ./logs:/var/log/apache2
-      
+   
+  php7:
+    container_name: php7
+    image: php:7.4-fpm-custom
+    build:
+      context: ./config/
+      dockerfile: Dockerfile-php7
+    restart: unless-stopped
+    user: $PUID:$PGID
+    networks:
+      - proxy
+    volumes:
+      - ./config/php:/usr/local/etc/php
 
 networks:
   proxy:
