Redo using Mod_MD for certs and Mod_http2
Completely custom httpd.conf and ssl.conf

--- a/httpd-php7/config/php/conf.d/extensions.ini
+++ b/httpd-php7/config/php/conf.d/extensions.ini
@@ -1,39 +1,19 @@
-extension=pear
-extension=pdo
 extension=enchant
-extension=mysqlnd
+extension=exif
 extension=gd
-extension=curl 
-extension=dom 
-extension=exif 
-extension=fileinfo 
-extension=hash 
-extension=json 
-extension=mbstring 
-extension=mysqli 
-extension=libsodium 
-extension=openssl 
-extension=pcre 
-extension=imagick 
-extension=xml 
-extension=zip 
-extension=filter 
-extension=iconv 
-extension=mcrypt 
-extension=simplexml 
-extension=xmlreader 
-extension=zlib 
-extension=ftp 
-extension=pspell 
-extension=redis 
-extension=sockets 
-extension=ssh2
-extension=pdo_mysql 
-extension=posix 
-extension=SPL 
-extension=tokenizer 
-extension=date 
 extension=gmagick 
-extension=libxml
+extension=http
+extension=imagick
+extension=mcrypt
+extension=mysqli
+extension=pdo_mysql
+extension=pspell
+extension=redis
+extension=sockets
+extension=ssh2
+extension=tidy
+extension=timezonedb
+extension=xsl 
+extension=zip 
 
 zend_extension=opcache
