--- a/httpd-php7/custom/Dockerfile-php7
+++ b/httpd-php7/custom/Dockerfile-php7
@@ -3,7 +3,7 @@ FROM php:7.4-fpm
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
 RUN chmod +x /usr/local/bin/install-php-extensions && sync && \
-    install-php-extensions enchant exif gd gmagick http imagick mcrypt mysqli pdo_mysql pspell redis sockets ssh2 tidy timezonedb xsl zip opcache
+    install-php-extensions enchant exif gd http imagick mcrypt mysqli pdo_mysql pspell redis sockets ssh2 tidy timezonedb xsl zip opcache
 	
 	
 	
