--- a/httpd-php7/docker-compose.yml
+++ b/httpd-php7/docker-compose.yml
@@ -1,37 +1,19 @@
 version: "3.7"
 
 services:
-  apache:
-    container_name: ${COMPOSE_PROJECT_NAME}_apache
-    image: 'httpd:latest'
-    user: $PUID:$PGID
-    restart: unless-stopped
-    ports:
-      - 80:80
-      - 443:443
-    networks:
-      - proxy
-    volumes:
-      - ./site:/var/www/html
-      - ./config/apache:/usr/local/apache2/conf
-      - ./config/apache/vhosts:/usr/local/apache2/conf/vhosts
-      - ./config/apache/extra:/usr/local/apache2/conf/extra
-      - ./config/apache/md:/usr/local/apache2/md
-      - ./logs:/usr/local/apache2/logs
-
-  php7:
-    container_name: ${COMPOSE_PROJECT_NAME}_php
-    image: php:7.4-fpm-custom
+  web:
+    container_name: ${COMPOSE_PROJECT_NAME}
+    image: php:7.4-apache
     build:
-      context: ./custom/
-      dockerfile: Dockerfile-php7
+      context: ./config/php/
+      dockerfile: Dockerfile
     restart: unless-stopped
-    user: $PUID:$PGID
     networks:
       - proxy
     volumes:
-      - ./config/php:/usr/local/etc/php
       - ./site:/var/www/html
+      - ./logs:/usr/local/apache2/logs
+      - ./config/apache/vhosts:/usr/local/apache2/conf/vhosts
 
 networks:
   proxy:
